# ThinkFlow

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: build.yml
scripts/: create_seed_db.py  create_seed_db.sh
thinkflow/: index.html  package-lock.json  package.json
thinkflow/src/: App.tsx  animal-island-ui.d.ts  index.css  main.tsx
thinkflow/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
thinkflow/src-tauri/capabilities/: default.json
thinkflow/src-tauri/icons/: icon.icns
thinkflow/src-tauri/src/: lib.rs  models.rs  tray.rs
thinkflow/src-tauri/src/agents/: briefing.rs  extraction.rs  fable.rs  memory_extraction.rs  memory_qa.rs  mod.rs  prioritization.rs  task_assistant.rs
thinkflow/src-tauri/src/commands/: hotkey.rs  llm.rs  memory.rs  mod.rs  settings.rs  task.rs
thinkflow/src-tauri/src/db/: sqlite.rs  vector.rs
thinkflow/src-tauri/src/llm/: anthropic.rs  compatible.rs  mod.rs  openai.rs  provider.rs
thinkflow/src/components/briefing/: DailyBrief.tsx
thinkflow/src/components/capture/: QuickCapture.tsx  TaskAssistant.tsx
thinkflow/src/components/fable/: FableView.tsx
thinkflow/src/components/focus/: FocusView.tsx
thinkflow/src/components/goals/: GoalDetailView.tsx  GoalListView.tsx
thinkflow/src/components/layout/: MainLayout.tsx
thinkflow/src/components/memory/: MemoryView.tsx
thinkflow/src/hooks/: useTauriEvents.ts
thinkflow/src/i18n/: index.ts
thinkflow/src/stores/: briefingStore.ts  chatStore.ts  fableStore.ts  focusStore.ts  goalStore.ts  memoryStore.ts  settingsStore.ts  taskStore.ts
(+11 files in other folders)
