[package]
name = "thinkflow"
version = "0.1.0"
description = "ThinkFlow - AI Smart Todo Desktop App"
authors = ["huangdq"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
async-trait = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Streaming / async utilities

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (already pulled by tauri)
tokio = { version = "1", features = ["full"] }
